--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -6,3 +6,17 @@
   padding: 0;
   margin: 0 auto;
 }
+
+.item {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 2fr;
+  grid-auto-rows: minmax(60px, auto);
+  justify-items: center;
+  align-items: center;
+  background-color: #e0dcbe;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 1px 1px 5px 1px gray;
+  padding: 0 20px;
+}
